# RayTracerChallenge

./: CMakeLists.txt  README.md  main.cpp
src/: tuple.cpp  tuple.h
tests/: test_tuple.cpp
